# kaist-ros-pkg

./: ProjectHome.md  kaist-ros-pkg.rosinstall
arm_kinematics_test/: mainpage.dox
arm_kinematics_test/launch/: fake_jointstate_pub_kinematics_solver.launch  get_ik.launch
arm_kinematics_tools/: CMakeLists.txt  manifest.xml
arm_kinematics_tools/launch/: arm_kinematics_nr_jl_search.launch  get_fk.launch  get_ik.launch
arm_kinematics_tools/scripts/: create_ikfast_moveit_plugin.py
arm_kinematics_tools/src/ikfastdemo/: ikfast54-output.cpp
arm_kinematics_tools/src/solvers/: arm_kinematics_nr.cpp  arm_kinematics_nr_jl_search.cpp
arm_kinematics_tools/templates/: ikfast54_plugin_template.cxx  ikfast61_moveit_plugin_template.cxx
kaist_webots/: CMakeLists.txt
kaist_webots/webots_controllers/: manifest.xml
kaist_webots/webots_controllers/config/: puma560_controllers.yaml
kaist_webots/webots_controllers/launch/: joint_position_controller_demo.launch
kaist_webots/webots_controllers/src/: webots_joint_position_controller.cpp
kaist_webots/webots_controllers/worlds/: .puma560arm.wbt.project  puma560arm.wbt
kaist_webots/webots_joy_demo/launch/: run.launch
kaist_webots/webots_joy_demo/src/: webots_joystick_controller.cpp
kaist_webots/webots_run/: manifest.xml
kaist_webots/webots_run/launch/: test_world.launch
kaist_webots/webots_run/src/: start_webots.cpp
trunk/: kaist-ros-pkg.rosinstall
trunk/arm_kinematics_test/: CMakeLists.txt  manifest.xml
trunk/arm_kinematics_test/launch/: get_fk.launch
trunk/arm_kinematics_test/src/: get_fk.cpp  get_ik.cpp
trunk/arm_kinematics_tools/: mainpage.dox
trunk/arm_kinematics_tools/launch/: arm_kinematics_nr.launch  (+1 more)
trunk/kaist_webots/: stack.xml
trunk/kaist_webots/webots_joy_demo/: CMakeLists.txt  manifest.xml
trunk/kaist_webots/webots_joy_demo/launch/: run.launch
trunk/kaist_webots/webots_joy_demo/src/: webots_joystick_controller.cpp
trunk/kaist_webots/webots_joy_demo/worlds/: joystick.wbt
trunk/webots/webots_joy_demo/: CMakeLists.txt  manifest.xml
trunk/webots/webots_joy_demo/launch/: run.launch
trunk/webots/webots_joy_demo/src/: joystick.cpp
webots/: stack.xml
webots/webots_joy_demo/: manifest.xml
(+22 files in other folders)
